--- a/ConfigData/application.yml
+++ b/ConfigData/application.yml
@@ -30,4 +30,4 @@ spring:
   profiles: noun
 words: boat,book,vote,seat,backpack,partition,groundhog
   
-management.endpoints.web.exposure.include=busrefresh
+# management.endpoints.web.exposure.include=busrefresh
